WS api refactoring